[package]
name = "stn_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "macros", "time" ] }
tokio-util = { version = "0.7.7", features = [ "codec" ] }
tokio-serial = "5.4.4"
crc = { version = "3.0.1" }
bytes = { version = "1.4.0" }
clap = "3.2.23"
serde = { version = "1.0.158", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3.28"
async-trait = "0.1.68"

[dev-dependencies]
test-case = "3.0.0"
