[package]
name = "stn_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "macros", "time" ] }
tokio-util = { version = "0.7.7", features = [ "codec" ] }
crc = { version = "3.0.1" }
bytes = { version = "1.4.0" }
serde = { version = "1.0.158", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3.28"
async-trait = "0.1.68"
thiserror = "1.0.40"
anyhow = "1.0.70"

[dev-dependencies]
test-case = "3.0.0"
tokio-serial = "5.4.4"
clap = { version = "3.2.23", features = ["derive"] }
indicatif = "0.17.3"
pin-project = "1.0.12"
btleplug = "0.10.5"
uuid = "1.3.1"
terminal-menu = "2.0.5"